--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
       room name: <input id="room-name" type="text" />
       <button id="join">join</button>
     </div>
-    <video id="local-video" width="400px" muted playsinline></video>
+    <video id="local-video" muted playsinline></video>
     <div id="button-area"></div>
     <div id="remote-media-area"></div>
     <script type="module" src="main.js"></script>
