--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
+    <script src="jquery-3.7.1.js"></script>
     <link rel="stylesheet" href="style.css">
     <title>SkyWay Tutorial</title>
   </head>
